[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Meshes/obj/Road.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameObjects/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/SkyTexture.tres" type="Texture" id=4]
[ext_resource path="res://Assets/Themes/Theme.tres" type="Theme" id=5]
[ext_resource path="res://UI/RestartMenu.gd" type="Script" id=6]
[ext_resource path="res://UI/Bank.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/CoefButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/UpgradeButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameObjects/AudioStreamPlayer.gd" type="Script" id=10]
[ext_resource path="res://UI/StartMenu.gd" type="Script" id=11]
[ext_resource path="res://UI/CongratLabel.gd" type="Script" id=12]
[ext_resource path="res://Assets/Textures/AdTexture.png" type="Texture" id=13]
[ext_resource path="res://Assets/Textures/buttons/current/f.png" type="Texture" id=14]
[ext_resource path="res://UI/SFXBar.gd" type="Script" id=15]
[ext_resource path="res://UI/SoundBar.gd" type="Script" id=16]
[ext_resource path="res://UI/MenuButton.gd" type="Script" id=17]
[ext_resource path="res://Assets/Sounds/lofi1.mp3" type="AudioStream" id=18]
[ext_resource path="res://GameObjects/Finish/Finish.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/Fonts/Burlesk-Regular.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://GameObjects/Enviroment/WorldEnvironment.gd" type="Script" id=21]
[ext_resource path="res://GameObjects/Collection/Collection.tscn" type="PackedScene" id=22]
[ext_resource path="res://GameObjects/Camera/Camera.gd" type="Script" id=23]
[ext_resource path="res://UI/LevelLabel.gd" type="Script" id=24]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0.5, 0.3 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.5, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.5, 15 )

[sub_resource type="PanoramaSky" id=10]
panorama = ExtResource( 4 )

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )
background_sky_custom_fov = 84.0
background_sky_orientation = Basis( 0.380236, -0.738606, -0.55667, 0.55667, 0.663414, -0.5, 0.738606, -0.119764, 0.663414 )
background_energy = 1.3

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=9]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 20 )

[node name="Game" type="Spatial" groups=["SaveForGame"]]
script = ExtResource( 3 )

[node name="Player" parent="." groups=["Saved"] instance=ExtResource( 2 )]
transform = Transform( -0.7, 0, -1.05697e-07, 0, 0.7, 0, 1.05697e-07, 0, -0.7, 0, 0.184769, 0 )

[node name="Level" type="Spatial" parent="."]

[node name="Road" parent="Level" instance=ExtResource( 1 )]

[node name="Finish" type="Spatial" parent="Level/Road"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 27.8 )

[node name="Finish" parent="Level/Road/Finish" instance=ExtResource( 19 )]

[node name="FinishArea" type="Area" parent="Level/Road/Finish"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Level/Road/Finish/FinishArea"]
shape = SubResource( 2 )

[node name="FinishTriggerArea" type="Area" parent="Level/Road"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Road/FinishTriggerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 14 )
shape = SubResource( 3 )

[node name="Borders" type="Spatial" parent="Level"]

[node name="LeftBorder" type="StaticBody" parent="Level/Borders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.175, 0.25, 14 )

[node name="CollisionShape" type="CollisionShape" parent="Level/Borders/LeftBorder"]
shape = SubResource( 1 )

[node name="RightBorder" type="StaticBody" parent="Level/Borders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0.25, 14 )

[node name="CollisionShape" type="CollisionShape" parent="Level/Borders/RightBorder"]
shape = SubResource( 1 )

[node name="Gates" type="Spatial" parent="Level"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )
script = ExtResource( 21 )
rotation_speed = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -10.0
autoplay = true
script = ExtResource( 10 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 5 )

[node name="RestartMenu" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )

[node name="SellButton" type="Button" parent="UI/RestartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -130.0
margin_right = -110.0
margin_bottom = -80.0
text = "Продать"

[node name="SellX2Button" type="Button" parent="UI/RestartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -135.0
margin_right = 70.0
margin_bottom = -45.0
text = "Продать дороже x2"

[node name="TextureRect" type="TextureRect" parent="UI/RestartMenu/SellX2Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = 7.0
margin_right = 11.0
margin_bottom = 29.0
texture = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="UI/RestartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -181.5
margin_right = 57.5
margin_bottom = -128.5
text = "Новый котик"
align = 1

[node name="CollectButton" type="Button" parent="UI/RestartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 107.0
margin_top = -129.0
margin_right = 187.0
margin_bottom = -79.0
text = "Оставить"

[node name="Bank" parent="UI" instance=ExtResource( 7 )]

[node name="StartMenu" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="StartButton" type="Button" parent="UI/StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -108.0
margin_right = 63.0
margin_bottom = -45.0
text = "Начать"

[node name="UpgradeButton" parent="UI/StartMenu" instance=ExtResource( 9 )]

[node name="CoefButton" parent="UI/StartMenu" instance=ExtResource( 8 )]

[node name="GuideLabel" type="Label" parent="UI/StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -205.0
margin_right = 266.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 4 )
text = "Зажимай левую кнопку мыши или двигай пальцем на телефоне
 чтобы управлять платформой"
align = 1

[node name="ShowCollectionButton" type="Button" parent="UI/StartMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -95.0
margin_right = 79.0
margin_bottom = -20.0
text = "Моя коллекция"

[node name="CongratLabel" type="Label" parent="UI/StartMenu"]
visible = false
margin_left = 406.0
margin_top = 283.0
margin_right = 618.0
margin_bottom = 409.0
text = "Поздраляем!
Вы прошли игру
Можете играть  в свое удоввольствие"
align = 1
script = ExtResource( 12 )

[node name="MenuButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_top = 37.0
margin_right = 61.0
margin_bottom = 84.0
text = "Меню"
script = ExtResource( 17 )

[node name="LevelLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -295.0
margin_top = 27.0
margin_right = -184.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 9 )
text = "Уровень 1"
script = ExtResource( 24 )

[node name="PauseMenu" type="Control" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
rect_min_size = Vector2( 250, 250 )

[node name="TextureRect" type="TextureRect" parent="UI/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/TextureRect"]
margin_left = 53.0
margin_top = 31.0
margin_right = 197.0
margin_bottom = 88.0
text = "Продолжить"

[node name="SoundBar" type="HSlider" parent="UI/PauseMenu/TextureRect"]
margin_left = 77.0
margin_top = 117.0
margin_right = 227.0
margin_bottom = 133.0
min_value = -80.0
max_value = -8.0
value = -10.0
script = ExtResource( 16 )

[node name="Label" type="Label" parent="UI/PauseMenu/TextureRect/SoundBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -21.0
margin_right = -5.0
margin_bottom = 19.0
text = "Музыка"
align = 1
valign = 1

[node name="SFXBar" type="HSlider" parent="UI/PauseMenu/TextureRect"]
margin_left = 78.0
margin_top = 164.0
margin_right = 228.0
margin_bottom = 180.0
min_value = -80.0
max_value = -8.0
value = -10.0
script = ExtResource( 15 )

[node name="Label" type="Label" parent="UI/PauseMenu/TextureRect/SFXBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -21.0
margin_right = -4.0
margin_bottom = 19.0
text = "Эффекты"
align = 1
valign = 1

[node name="ReturnButton" type="Button" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -159.0
margin_right = 144.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 8 )
text = "обратно в игру"

[node name="Collection" parent="." groups=["Saved"] instance=ExtResource( 22 )]
transform = Transform( 0.0181155, 0, -0.999836, 0, 1, 0, 0.999836, 0, 0.0181155, -3.05759, 0, 10.2469 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.230483, -0.398285, 0.887833, 0.00615958, 0.912977, 0.407965, -0.973057, -0.0885604, 0.212879, -0.578855, 1.40325, 23.8843 )
script = ExtResource( 23 )

[connection signal="level_changed" from="." to="UI/LevelLabel" method="_on_Game_level_changed"]
[connection signal="player_finished" from="." to="AudioStreamPlayer" method="_on_Game_player_finished"]
[connection signal="player_finished" from="." to="UI/RestartMenu" method="_on_game_player_finished"]
[connection signal="body_entered" from="Level/Road/Finish/FinishArea" to="." method="_on_FinishArea_body_entered"]
[connection signal="body_entered" from="Level/Road/FinishTriggerArea" to="Level/Road/Finish/Finish" method="_on_finish_trigger_area_body_entered"]
[connection signal="ad_state_changed" from="UI/RestartMenu" to="AudioStreamPlayer" method="_on_RestartMenu_ad_state_changed"]
[connection signal="button_up" from="UI/RestartMenu/SellButton" to="UI/RestartMenu" method="_on_sell_button_button_up"]
[connection signal="button_up" from="UI/RestartMenu/SellX2Button" to="UI/RestartMenu" method="_on_sell_x_2_button_button_up"]
[connection signal="button_up" from="UI/RestartMenu/CollectButton" to="." method="_on_collect_button_button_up"]
[connection signal="button_up" from="UI/StartMenu/StartButton" to="UI/StartMenu" method="_on_start_button_button_up"]
[connection signal="upgrade_changed" from="UI/StartMenu/CoefButton" to="UI/RestartMenu" method="_on_CoefButton_upgrade_changed"]
[connection signal="button_up" from="UI/StartMenu/ShowCollectionButton" to="." method="_on_show_collection_button_button_up"]
[connection signal="button_up" from="UI/MenuButton" to="UI/MenuButton" method="_on_button_up"]
[connection signal="button_up" from="UI/PauseMenu/TextureRect/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="value_changed" from="UI/PauseMenu/TextureRect/SoundBar" to="UI/PauseMenu/TextureRect/SoundBar" method="_on_value_changed"]
[connection signal="value_changed" from="UI/PauseMenu/TextureRect/SFXBar" to="UI/PauseMenu/TextureRect/SFXBar" method="_on_value_changed"]
[connection signal="button_up" from="UI/ReturnButton" to="." method="_on_return_button_button_up"]

[editable path="Player"]
